<resources>
    <string name="app_name">GAME BUDDY</string>
    <string name="url">https://social-media-981d0-default-rtdb.asia-southeast1.firebasedatabase.app/</string>
    <string name="title_activity_individual_post">IndividualPost</string>
    <string name="tab_text_1">Photos</string>
    <string name="tab_text_2">Videos</string>
    <string name="tab_text_3">Stories</string>
    <string name="sample">Sample Text</string>

    <!--Login Activity-->
    <string name="great_la">Welcome back!</string>
    <string name="great_desc_la">We\'re so excited to see you again</string>
    <string name="emaiLbl_la">Email</string>
    <string name="hintEmail_la">samp@gmail.com</string>
    <string name="passLbl_la">Password</string>
    <string name="hintPass_la">Password</string>
    <string name="showpass_la">Show Password</string>
    <string name="sigin_la">SIGN IN</string>
    <string name="forgotpass_la">Forget your password?</string>


    <!--Strings for On Boarding Screen -->
    <string name="first_slide_title">About Game Buddy</string>
    <string name="second_slide_title">Search Everything in Game Buddy</string>
    <string name="third_slide_title">Create a team</string>
    <string name="fourth_slide_title">Video Chat with your team</string>
    <string name="fifth_slide_title">Get more subscriber</string>

    <!--String in Dashboard fragment-->
    <string name="c1_df">Strategy Game</string>
    <string name="c2_df">Action Game</string>
    <string name="c3_df">Adventure Game</string>
    <string name="c4_df">Fps Game</string>

    <!---Descriptopn-->
    <string name="first_slide_desc">This Gaming Social Platform also claims to offer to break the cycle of what stimulates toxicity in the Gaming Community. The application is design to connect like-minded gamers that makes gaming more fun and it lowers toxicity, it also lets you create a team with your buddies, participate in tournaments or battle other teams in scrims.
        This will benefit the gamers who want to socialize, play with, have fun with other gamers.</string>
    <string name="second_slide_desc">Game Buddy create a search activity to search all of your favorite games, search other G- Buddy and find
    friends and all upcoming events so can miss events.</string>
    <string name="third_slide_desc">Build a team with other players around the world</string>
    <string name="fourth_slide_desc">Now you can easily communicate with your team by a video chat or group chat</string>
    <string name="fifth_slide_desc">Upload your highlights and get more subcriber to become rank 1 in leaderboard</string>


    <!--Shop Fragment-->
    <string name="Title_shop">MarketPlace</string>
    <string name="sell_shop">Sell</string>
    <string name="hint_search_shop">Search</string>
    <string name="popular">Popular</string>
    <string name="desc_shop">Good day G-Buddy!Shop now to improve your game play and make your gaming setup beautiful.</string>

    <!--Shop Activity-->
    <string name="sell_publish">Publish</string>
    <string name="sell_title">New Listing</string>
    <string name="sell_addPhoto">Add Photo</string>
    <string name="sell_hintt">Title</string>
    <string name="sell_hintp">Price</string>
    <string name="sell_hintc">Category</string>
    <string name="sell_hintco">Condition</string>
    <string name="sell_hintd">Description</string>

    <!--SelectedItemSell-->
    <string name="detail_lbl">Detail</string>
    <string name="condition_lbl">Condition</string>
    <string name="cat_lbl">Category</string>
    <string name="desc_lbl">Description</string>
    <string name="seller_lbl">Seller Information</string>
    <string name="seller_view_lbl">View Profile</string>

    <!--Create Group-->
    <string name="title_createGroup">CREATE GROUP</string>
    <string name="title_desc_createGroup">Your group is where you and your friends hang out. Make yours and start talking.</string>
    <string name="upload_createGroup">UPLOAD</string>
    <string name="hint_et_createGroup">Group Name</string>
    <string name="create_createGroup">Create Group</string>
    <string name="agree_createGroup">By Creating a group,you agree to Game Buddy Community Guidlines.</string>

    <!--Community fragment-->
    <string name="title_comFragment">Community</string>
    <string name="grouplbl_comFragment">Group</string>
    <string name="searchet_hint_comFragment">Search user/Group</string>


    <!--invite people group-->
    <string name="title_aip">Invite People</string>
    <string name="hintSearch_aip">Search</string>


    <!--Group Menu-->
    <string name="gm_groupMembers">Group Members</string>
    <string name="gm_viewPhoto">View Photo and Video</string>
    <string name="gm_changePhoto">Change Group Photo</string>
    <string name="gm_changeName">Change Name</string>
    <string name="gm_deleteConvo">Delete Conversation</string>
    <string name="gm_blockMember">Block Member</string>
    <string name="gm_leaveGroup">Leave Group</string>
    <string name="gm_report">Report Problem</string>

    <!--Invite people layout-->
    <string name="ipl_invite">Invite</string>

    <!--Post_layout-->

    <string name="report_desc">Thank you for your concern,this report help the community of Gamebuddy to avoid malicious content.Send a reason and the team check the post and send a response to you.</string>

    <string name="facebook_app_id">403985671426930</string>
    <string name="fb_login_protocol_scheme">fb403985671426930</string>


</resources>