<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/back"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white"
                    android:layout_margin="20dp">
                </ImageView>

                <TextView
                    android:id="@+id/txtcreate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/great_la"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/back">
                </TextView>

                <TextView
                    android:id="@+id/intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/great_desc_la"
                    android:textColor="@color/colorHintText"
                    app:layout_constraintTop_toBottomOf="@id/txtcreate"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/loginlot"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/intro"
                    app:lottie_rawRes="@raw/loginlot"
                    android:layout_marginTop="10dp"
                    app:lottie_autoPlay="true" />

                <TextView
                    android:id="@+id/email_lbl"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/loginlot"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginEnd="320dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/grey"
                    android:text="@string/emaiLbl_la"/>

                <EditText
                    app:layout_constraintTop_toBottomOf="@id/email_lbl"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/white"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/login_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintEmail_la"
                    android:autofillHints="username"
                    android:textColorHint="@color/grey"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"/>

                <TextView
                    android:id="@+id/pass_lbl"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@id/login_email_et"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginEnd="300dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/grey"
                    android:text="@string/passLbl_la"/>

                <EditText
                    app:layout_constraintTop_toBottomOf="@id/pass_lbl"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/white"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/login_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintPass_la"
                    android:textColorHint="@color/grey"
                    android:drawableStart="@drawable/ic_outline_visibility_24"
                    android:drawablePadding="10dp"
                    android:textColor="@color/white"
                    android:inputType="textPassword"/>

                <CheckBox
                    android:id="@+id/showpass_la"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/showpass_la"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif"
                    app:layout_constraintTop_toBottomOf="@id/login_password_et"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"/>

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/btn"
                    android:includeFontPadding="false"
                    android:text="@string/sigin_la"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:layout_constraintTop_toBottomOf="@id/showpass_la"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="30dp"/>

                    <ProgressBar
                        android:id="@+id/progressbar_login"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginTop="150dp"
                        android:visibility="gone"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />


                <TextView
                    android:id="@+id/tv_forgot_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/forgotpass_la"
                    android:textColor="@color/btn"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    app:layout_constraintTop_toBottomOf="@id/button_login"/>





            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>