<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_sell_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell_shop"
                android:textSize="20sp"
                android:drawablePadding="10dp"
                android:textColor="@color/white"
                android:fontFamily="@font/baloo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                app:drawableEndCompat="@drawable/sell_icon" />

            <TextView
                android:id="@+id/shop_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title_shop"
                android:textColor="@color/white"
                android:fontFamily="@font/baloo"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="95dp"
                android:layout_marginStart="25dp"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@id/shop_lbl"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="25sp"
                android:layout_marginTop="10dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/desc_shop"
                android:textColor="@color/grey"
                android:fontFamily="@font/baloo"
                android:textSize="15sp"/>

            <com.airbnb.lottie.LottieAnimationView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/shoplot"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:lottie_rawRes="@raw/shoplot"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="20dp"
                app:lottie_loop="true"
                app:lottie_autoPlay="true" />

            <EditText
                android:id="@+id/et_search_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                app:layout_constraintTop_toBottomOf="@id/shoplot"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:drawableStart="@drawable/ic_round_search_24"
                android:drawableTint="@color/black"
                android:padding="20dp"
                android:backgroundTint="@color/white"
                android:drawablePadding="10dp"
                android:hint="@string/hint_search_shop"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="text"
                android:autofillHints="Computer" />

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@id/et_search_shop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lbl_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:textColor="@color/white"
                    android:fontFamily="@font/baloo"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_shop"
                    app:layout_constraintTop_toBottomOf="@id/lbl_popular"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_marginTop="20dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>